force-app/main/default/objects/Employee__c/fields/Abweichender_Kontoinhaber__c.field-meta.xml
<CustomField>
    <fullName>Abweichender_Kontoinhaber__c</fullName>
    <label>Alternative Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>