force-app/main/default/objects/Employee__c/fields/AdditionToAdress__c.field-meta.xml
<CustomField>
    <fullName>AdditionToAdress__c</fullName>
    <label>Addition Adress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>