force-app/main/default/objects/Employee__c/fields/BIC__c.field-meta.xml
<CustomField>
    <fullName>BIC__c</fullName>
    <label>BIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>