force-app/main/default/objects/Employee__c/fields/BirthName__c.field-meta.xml
<CustomField>
    <fullName>BirthName__c</fullName>
    <label>Birth Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>