force-app/main/default/objects/Employee__c/fields/Child_Tax_Credit__c.field-meta.xml
<CustomField>
    <fullName>Child_Tax_Credit__c</fullName>
    <label>Child Tax Credit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gesetzlich versichert</fullName>
            </value>
            <value>
                <fullName>Privat versichert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>