force-app/main/default/objects/Employee__c/fields/ChurchTaxable__c.field-meta.xml
<CustomField>
    <fullName>ChurchTaxable__c</fullName>
    <label>Church Taxable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ja</fullName>
            </value>
            <value>
                <fullName>Nein</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>