force-app/main/default/objects/Employee__c/fields/HealthInsurance__c.field-meta.xml
<CustomField>
    <fullName>HealthInsurance__c</fullName>
    <label>Health Insurance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>