force-app/main/default/objects/Employee__c/fields/HealthInsuranceAdress__c.field-meta.xml
<CustomField>
    <fullName>HealthInsuranceAdress__c</fullName>
    <label>Health Insurance Adress</label>
    <type>TextArea</type>
</CustomField>