force-app/main/default/objects/Employee__c/fields/HealthInsuranceContribution__c.field-meta.xml
<CustomField>
    <fullName>HealthInsuranceContribution__c</fullName>
    <label>Health Insurance Contribution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>