force-app/main/default/objects/Employee__c/fields/HouseNumber__c.field-meta.xml
<CustomField>
    <fullName>HouseNumber__c</fullName>
    <label>House Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>