force-app/main/default/objects/Employee__c/fields/KindOfInsurance__c.field-meta.xml
<CustomField>
    <fullName>KindOfInsurance__c</fullName>
    <label>Kind Of Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gesetzlich versichert</fullName>
            </value>
            <value>
                <fullName>Privat versichert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>