force-app/main/default/objects/Employee__c/fields/NumberOfChild__c.field-meta.xml
<CustomField>
    <fullName>NumberOfChild__c</fullName>
    <label>Number Of Children</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>