force-app/main/default/objects/Employee__c/fields/NursingInsurance__c.field-meta.xml
<CustomField>
    <fullName>NursingInsurance__c</fullName>
    <label>Nursing Insurance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>