force-app/main/default/objects/Employee__c/fields/Parentsproperty__c.field-meta.xml
<CustomField>
    <fullName>Parentsproperty__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Parents property</label>
    <type>Checkbox</type>
</CustomField>