force-app/main/default/objects/Employee__c/fields/PensionInsuranceNumber__c.field-meta.xml
<CustomField>
    <fullName>PensionInsuranceNumber__c</fullName>
    <label>Pension Insurance Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>