force-app/main/default/objects/Employee__c/fields/PlaceOfBirth__c.field-meta.xml
<CustomField>
    <fullName>PlaceOfBirth__c</fullName>
    <label>Place Of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>