force-app/main/default/objects/Employee__c/fields/ReligiousAffiliation__c.field-meta.xml
<CustomField>
    <fullName>ReligiousAffiliation__c</fullName>
    <label>Religious Affiliation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>