force-app/main/default/objects/Employee__c/fields/TaxAllowanceAnnual__c.field-meta.xml
<CustomField>
    <fullName>TaxAllowanceAnnual__c</fullName>
    <label>Tax Allowance Annual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>