force-app/main/default/objects/Employee__c/fields/TaxAllowanceMonth__c.field-meta.xml
<CustomField>
    <fullName>TaxAllowanceMonth__c</fullName>
    <label>Tax Allowance Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>