force-app/main/default/objects/Employee__c/fields/TaxIdentificationNumber__c.field-meta.xml
<CustomField>
    <fullName>TaxIdentificationNumber__c</fullName>
    <label>Tax Identification Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>