force-app/main/default/objects/Employee__c/fields/TaxOffice__c.field-meta.xml
<CustomField>
    <fullName>TaxOffice__c</fullName>
    <label>Tax Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>