force-app/main/default/objects/Employee__c/fields/VatID__c.field-meta.xml
<CustomField>
    <fullName>VatID__c</fullName>
    <label>Vat ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>